# raspberry-pi-video-recorder

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  LED_PATTERN_FRAMEWORK.md  PEACE_OF_MIND.md  PI5_QUICK_SETUP.md  README.md  UNINSTALL.sh  lint.sh  metrics_exporter.py  pyproject.toml  recorder_service.py  requirements-dev.txt  requirements-upload.txt  requirements.txt  setup_pi5.sh  setup_youtube_auth.py  test_button.py  test_heartbeat.py  test_led.py  test_metrics.py  test_pattern_framework.py  test_progressive_warnings.py  test_snooze.py  test_upload.py  watchdog.py
config/: settings.py  storage.yaml
core/: __init__.py  error_handler.py  event_bus.py  network.py  state_machine.py
hardware/: __init__.py  audio_controller.py  button_controller.py  constants.py  factory.py  led_controller.py
hardware/audio/: __init__.py  audio_queue.py  message_library.py
hardware/controllers/: __init__.py  audio_controller.py  button_controller.py  led_controller.py
hardware/implementations/: __init__.py  mock_gpio.py  mock_tts.py  pyttsx3_tts.py  rpi_gpio.py
hardware/interfaces/: __init__.py  gpio_interface.py  tts_interface.py
hardware/utils/: __init__.py  gpio_utils.py  pattern_parser.py
raspberry_pi_video_recorder.egg-info/: PKG-INFO  SOURCES.txt
recording/: __init__.py  camera_manager.py  constants.py  factory.py  recording_session.py
recording/controllers/: __init__.py  camera_manager.py  recording_session.py
recording/implementations/: __init__.py  ffmpeg_capture.py  mock_capture.py
recording/interfaces/: __init__.py  video_capture_interface.py
recording/utils/: __init__.py  recording_utils.py
scripts/: README.md  cleanup_orphaned_db_entries.py  quick_check.py  remote_control.py  test_all_hardware.py  test_audio.py  test_audio_recording.py  test_button.py  test_camera_audio.py  test_leds.py  upload_failed_videos.py
storage/: README.md  __init__.py  config.py  constants.py  factory.py  storage_manager.py
storage/controllers/: storage_controller.py
storage/implementations/: local_storage.py  mock_storage.py
storage/interfaces/: storage_interface.py
storage/managers/: cleanup_manager.py  file_manager.py  metadata_manager.py  space_manager.py
storage/models/: video_file.py
storage/utils/: path_utils.py  validation_utils.py
systemd/: GRAFANA-CLOUD-SETUP.md  PHASE-2-GUIDE.md  README.md  TASK-1.5-GUIDE.md  TESTING.md  grafana-dashboard-simple.json  grafana-dashboard-trends-ui.json  grafana-dashboard-trends.json  grafana-dashboard.json  install-grafana-agent.sh  install-node-exporter.sh  install.sh  recorder-metrics.service  recorder-watchdog.service  recorder.service  sudoers.conf  test-checklist-post-reboot.sh  test-checklist.sh  test-summary.sh
temp/: LOG_INVENTORY.md  improvements.md
temp_videos/: video_metadata.db
tests/: README.md  __init__.py
tests/hardware/: README.md  __init__.py  audio_controller.test.py  conftest.py  test_hardware_integration.py
tests/hardware/audio/: test_audio_queue.py
tests/hardware/controllers/: test_audio_controller.py  test_led_controller.py
tests/recording/: README.md  __init__.py  conftest.py  test_recording_integration.py
tests/recording/controllers/: test_camera_manager.py  test_recording_session.py
tests/recording/implementations/: test_mock_capture.py
tests/recording/utils/: test_recording_utils.py
tests/storage/: README.md  __init__.py  conftest.py  test_storage_integration.py
tests/storage/managers/: test_metadata_manager.py
tests/storage/utils/: test_validation_utils.py
tests/upload/: __init__.py  test_upload_integration.py
upload/: QUICK_START_CHECKLIST.md  __init__.py  constants.py  factory.py  upload_manager.py
upload/_README/: README.md  example.py.txt
upload/auth/: __init__.py  oauth_manager.py
upload/controllers/: __init__.py  upload_controller.py
upload/implementations/: __init__.py  mock_uploader.py  youtube_uploader.py
upload/interfaces/: __init__.py  uploader_interface.py
